1. utilize bin file to store voice resource 2. create DAC voice function

--- a/GPCE500/A18_A34_DACOut/Project/GPCE500A_DacSpk.rc
+++ b/GPCE500/A18_A34_DACOut/Project/GPCE500A_DacSpk.rc
@@ -7,58 +7,10 @@ PARAM=
 EXPORT=3
 SPECIFICFLAG=0
 # Begin Source File
-SOURCE=voice\animals02_34K.sp4
+SOURCE=voice\SpinVoice.bin
 USEPARAM=FALSE
 PARAM=
-ID=RES_ANIMALS02_34K_SP4
-EXPORT=3
-SPECIFICFLAG=0
-# End Source File
-# Begin Source File
-SOURCE=voice\animals03_34K.sp4
-USEPARAM=FALSE
-PARAM=
-ID=RES_ANIMALS03_34K_SP4
-EXPORT=3
-SPECIFICFLAG=0
-# End Source File
-# Begin Source File
-SOURCE=voice\animals04_34K.sp4
-USEPARAM=FALSE
-PARAM=
-ID=RES_ANIMALS04_34K_SP4
-EXPORT=3
-SPECIFICFLAG=0
-# End Source File
-# Begin Source File
-SOURCE=voice\animals08_34K.sp4
-USEPARAM=FALSE
-PARAM=
-ID=RES_ANIMALS08_34K_SP4
-EXPORT=3
-SPECIFICFLAG=0
-# End Source File
-# Begin Source File
-SOURCE=voice\tailor3_16K.a18
-USEPARAM=FALSE
-PARAM=
-ID=RES_TAILOR3_16K_A18
-EXPORT=3
-SPECIFICFLAG=0
-# End Source File
-# Begin Source File
-SOURCE=voice\them2_seekctrl_001.sp4
-USEPARAM=FALSE
-PARAM=
-ID=RES_THEM2_SEEKCTRL_001_SP4
-EXPORT=3
-SPECIFICFLAG=0
-# End Source File
-# Begin Source File
-SOURCE=voice\FileMerger_ROM.bin
-USEPARAM=FALSE
-PARAM=
-ID=RES_FILEMERGER_ROM_BIN
+ID=RES_SPINVOICE_BIN
 EXPORT=3
 SPECIFICFLAG=0
 # End Source File
